...
        super.viewDidLoad()
        initUI()
    }
    
    func initUI() {
        skillNameTextField.delegate = self
        skillNameTextField.accessibilityIdentifier = "skill name"
    }
    
    func validateForm() -> Bool {
        if skillNameTextField.text!.isEmpty {
            showsimpleAlert(title: "Skill is empty", message: "You should fill all the blanks.")
            return false;
...
    
    func showSavedAlert() {
        let alert = UIAlertController(title: "Saved", message: "Your work summary is saved.", preferredStyle: .alert)
        alert.addAction(UIAlertAction(title: "Add Another", style: .default, handler: { [weak self] alert in
            self?.cleanForm()
        }))
        alert.addAction(UIAlertAction(title: "Go Back", style: .default, handler: { [weak self] alert in
            self?.dismiss(animated: true)
        }))
        present(alert, animated: true)
    }
    
    func save() {
...
