...
                        <navigationItem title="My Resume" id="xmj-2p-bIN">
                            <barButtonItem key="rightBarButtonItem" style="plain" id="ahH-NE-Dog">
                                <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="p3Y-Sx-pD4">
                                    <rect key="frame" x="319" y="5" width="75" height="34.5"/>
                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                    <state key="normal" title="Button"/>
                                    <buttonConfiguration key="configuration" style="plain" title="Save"/>
                                    <connections>
                                        <action selector="btnSaveTapped:" destination="-1" eventType="touchUpInside" id="q7v-QW-Iav"/>
                                    </connections>
                                </button>
                                <connections>
                                    <action selector="btnSaveTapped:" destination="-1" id="VId-Qf-8lL"/>
...
                                                    <rect key="frame" x="130" y="0.0" width="0.0" height="50"/>
                                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                </view>
                                                <button opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="749" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nKE-DH-mGE">
                                                    <rect key="frame" x="130" y="0.0" width="0.0" height="50"/>
                                                    <state key="normal" title="Button"/>
                                                    <buttonConfiguration key="configuration" style="plain" title="Add Skill">
                                                        <fontDescription key="titleFontDescription" name="Helvetica" family="Helvetica" pointSize="17"/>
                                                    </buttonConfiguration>
                                                    <connections>
                                                        <action selector="btnAddSkillTapped:" destination="-1" eventType="touchUpInside" id="D4r-ge-Exk"/>
                                                    </connections>
                                                </button>
...
