...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mtx-OU-Fvz">
                                <rect key="frame" x="33" y="787" width="348" height="42"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="42" id="XDX-gw-BJy"/>
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="filled" title="Create A Resume"/>
                                <connections>
                                    <action selector="btnCreateNewResumeTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="uDS-8j-Eus"/>
                                </connections>
                            </button>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
...
